Sun Oct  9 22:42:00 BST 2011  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import getline module (used in lib/encodings.c).

Sun Oct  9 22:26:15 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/es/man8/accessdb.man8: Remove; this is simply an out-of-date
	  copy of the English page.  Reported by Křištof Želechovski.
	* man/es/Makefile.am (man8_MANS): Remove man8/accessdb.8.

Sun Oct  9 22:21:19 BST 2011  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20110908-stable.

Sun Oct  9 00:24:22 BST 2011  Peter Schiffer  <pschiffe@redhat.com>

	* src/filenames.c (filename_info): Zero-initialise the contents of
	  info to avoid a double-free in store_descriptions (Fedora bug
	  #702904).
	* src/tests/mandb-6: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-6.
	* NEWS: Document this.

Sun Oct  9 00:16:25 BST 2011  Colin Watson  <cjwatson@debian.org>

	* NEWS: Update.

Sat Oct  8 23:34:26 BST 2011  Colin Watson  <cjwatson@debian.org>

	Convert the German manual pages translation to po4a.

	* man/po4a/po/de.po: New from Translation Project (thanks, Martin
	  Eberhard Schauer).
	* man/LINGUAS: Remove de.
	* man/LINGUAS.po4a: Add de.
	* man/de/man1, man/de/man5, man/de/man8: Remove.
	* man/de/Makefile.am (PO4A_LINGUA): Set to yes.
	  (EXTRA_DIST): Add translator.add.
	  (man1_MANS): Add man1/lexgrog.1 and man1/manconv.1.
	* man/po4a/Makefile.am (POFILES): Add po/de.po.
	* man/po4a/po4a.cfg (po4a_langs): Add de.
	* man/THANKS: Credit Martin Schauer with man/de as well as de.po.
	* .bzrignore: Add man/de/man1, man/de/man5, and man/de/man8.

Sat Oct  8 17:11:08 BST 2011  Yasuaki Taniguchi  <yasuakit@gmail.com>

	* po/ja.po: Update from Translation Project.

Sat Oct  8 17:09:41 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/THANKS: Consolidate duplicated credit.

Sat Oct  8 17:07:17 BST 2011  Colin Watson  <cjwatson@debian.org>

	Convert the Japanese manual pages translation to po4a.
