@@ -1,3 +1,8 @@
+Sun Oct  9 22:50:36 BST 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (add_to_dirlist): Read lines from configuration file
+	  using getline rather than fgets with a fixed-size buffer.
+
 Sun Oct  9 22:42:00 BST 2011  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib: Import getline module (used in lib/encodings.c).
